fixed java/pom.xml after merge accident